# churn_api

./: Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  locustfile.py  ping.py  predict.py  pyproject.toml  schemas.py  test.py  train.py  workshop-uv-fastapi.ipynb
.github/workflows/: cd.yml  ci.yml
config/: prometheus.yml
homework/: homework.ipynb  predict.py  test.py
tests/: test_api.py  test_model.py
