[project]
name = "deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.0",
    "pandas>=2.3.3",
    "scikit-learn==1.7.2",
    "uvicorn>=0.38.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "mlflow>=2.19.0",
    "pandera>=0.18.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "locust>=2.20.0",
    "httpx>=0.27.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
